tester/testsuite/extensions/arrays1/bad/bad003.jl
int main() {
    int[] xs = new int[5];

    printInt(xs.size);

    return 1;
}
